--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
       <h1>zoho </h1>
-    <img  id='image' src='elon.jpg' crossorigin='anonymous' />
+    <img  id='image' src='test.jpg' crossorigin='anonymous' />
     <canvas id="canvas"></canvas>
   </body>
 
