--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-      <h1>zoho </h1>
+      <h1>hola </h1>
     <img  id='image' src='test.jpg' crossorigin='anonymous' />
     <canvas id="canvas"></canvas>
   </body>
